basic tour implementation

--- a/ckanext/tour/assets/webassets.yml
+++ b/ckanext/tour/assets/webassets.yml
@@ -1,14 +1,14 @@
-# tour-js:
-#   filter: rjsmin
-#   output: ckanext-tour/%(version)s-tour.js
-#   contents:
-#     - js/tour.js
-#   extra:
-#     preload:
-#       - base/main
+tour-js:
+  filter: rjsmin
+  output: ckanext-tour/%(version)s-tour.js
+  contents:
+    - js/vendor/intro.min.js
+    - js/vendor/mobile-detect.min.js
+    - js/init-tour.js
 
-# tour-css:
-#   filter: cssrewrite
-#   output: ckanext-tour/%(version)s-tour.css
-#   contents:
-#     - css/tour.css
+
+tour-css:
+  filter: cssrewrite
+  output: ckanext-tour/%(version)s-tour.css
+  contents:
+    - css/vendor/introjs.min.css
