--- a/ckanext/tour/assets/webassets.yml
+++ b/ckanext/tour/assets/webassets.yml
@@ -7,6 +7,7 @@ tour-js:
     - js/tour-init.js
     - js/tour-steps.js
     - js/tour-htmx.js
+    - js/tour-image-upload.js
 
 tour-htmx:
   filter: rjsmin
